--- a/main/src/ui/views/layout.pug
+++ b/main/src/ui/views/layout.pug
@@ -22,6 +22,8 @@ html(lang="en")
             li.nav-item
               a.nav-link(href='/check') Check domain
     .container.mt-4
-      h1.mb-4= title
+      .d-flex.align-items-center.mb-4
+        h1.mb-0= title
+        block title-actions
       block content
     script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous")
