--- a/torrent-ui/views/layout.pug
+++ b/torrent-ui/views/layout.pug
@@ -25,26 +25,38 @@ html(lang="en")
         display: flex;
         flex-direction: column;
       }
-      .back-link {
-        position: fixed;
-        top: 1rem;
-        left: 1rem;
-        color: var(--muted);
-        text-decoration: none;
+      .breadcrumb {
+        max-width: 40rem;
+        margin: 0 auto;
+        width: 100%;
+        padding: 1.5rem 1rem 0;
         font-size: 0.875rem;
-        z-index: 10;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 0.375rem;
       }
-      .back-link:hover { color: var(--foreground); }
-      .user-name {
-        position: fixed;
-        top: 1rem;
-        right: 1rem;
-        color: var(--muted);
-        font-size: 0.875rem;
-        z-index: 10;
+      .breadcrumb a {
+        text-decoration: none;
+        color: #fb7185;
+      }
+      .breadcrumb a:hover { color: var(--primary); }
+      .breadcrumb-sep {
+        color: grey;
+      }
+      .breadcrumb-current {
+        color: var(--foreground);
+        font-size: 1.5rem;
+        font-weight: 700;
       }
   body
-    a.back-link(href="http://dom.internal") ← Домой
-    if userProfile
-      .user-name= userProfile.name
+    nav.breadcrumb
+      a(href="http://dom.internal") Дом
+      span.breadcrumb-sep /
+      if backLink
+        a(href=backLink) Загрузки
+        span.breadcrumb-sep /
+        span.breadcrumb-current= pageTitle || ''
+      else
+        span.breadcrumb-current Загрузки
     block content
